--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function generateCertificate(){
   const ctx = canvas.getContext("2d");
 
   const bg = new Image();
-  bg.src = (correctAnswers === quizzes.length) ? "images/fullscore_bg.jpg" : "images/participation_bg.png";
+  bg.src = (correctAnswers === quizzes.length) ? "images/fullscore_bg.png" : "images/participation_bg.png";
 
   bg.onload = () => {
     ctx.drawImage(bg,0,0,canvas.width,canvas.height);
@@ -168,7 +168,7 @@ function generateCertificate(){
     const iconImg = new Image();
     iconImg.src = selectedIcon;
     iconImg.onload = ()=>{
-      ctx.drawImage(iconImg, 125, 250, 250, 250);
+      ctx.drawImage(iconImg, 325, 250, 150, 150);
 
       // 名前を中央より少し上に表示
       ctx.font = "36px serif";
