--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <p>アイコンを選択：</p>
   <div id="iconSelection">
     <div>
-      <img src="images/icon1.png" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon1.PNG" class="iconOption" onclick="selectIcon(this)">
       <img src="images/icon2.png" class="iconOption" onclick="selectIcon(this)">
       <img src="images/icon3.png" class="iconOption" onclick="selectIcon(this)">
       <img src="images/icon4.png" class="iconOption" onclick="selectIcon(this)">
@@ -209,3 +209,4 @@ displayQuestion();
 
 </body>
 </html>
+
