--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
   <div id="iconSelection">
     <div>
       <img src="images/icon1.PNG" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon2.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon3.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon4.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon5.png" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon2.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon3.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon4.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon5.PNG" class="iconOption" onclick="selectIcon(this)">
     </div>
     <div>
-      <img src="images/icon6.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon7.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon8.png" class="iconOption" onclick="selectIcon(this)">
-      <img src="images/icon9.png" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon6.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon7.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon8.PNG" class="iconOption" onclick="selectIcon(this)">
+      <img src="images/icon9.PNG" class="iconOption" onclick="selectIcon(this)">
     </div>
   </div><br>
   <button onclick="generateCertificate()">賞状を表示</button>
@@ -209,4 +209,5 @@ displayQuestion();
 
 </body>
 </html>
+
 
