--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   .selected { border-color: #007BFF; }
   .choiceBtn.selected { background-color: #007BFF; color: #fff; }
   .choiceBtn.disabled { opacity: 0.5; pointer-events: none; }
+    #certificateCanvas {
+    display: block;
+    margin: 0 auto;
+  }
 </style>
 </head>
 <body>
@@ -207,6 +211,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
