--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   .selected { border-color: #007BFF; }
   .choiceBtn.selected { background-color: #007BFF; color: #fff; }
   .choiceBtn.disabled { opacity: 0.5; pointer-events: none; }
-    #certificateCanvas {
-    display: block;
-    margin: 0 auto;
-  }
+  #certificateCanvas { display: block; margin: 0 auto; }
 </style>
 </head>
 <body>
@@ -211,6 +208,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
