--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet"> 
 <style>
   body { font-family: 'Kosugi Maru', sans-serif; text-align: center; background: #f0f0f0; }
-  #quizContainer, #nameInput, #certificate { margin: 20px auto; width: 400px; background: #fff; padding: 20px; border-radius: 8px; }
+  #quizContainer, #nameInput { margin: 20px auto; width: 400px; background: #fff; padding: 20px; border-radius: 8px;　}
+  #certificate { margin: 20px auto; background: #fff; padding: 20px; border-radius: 8px; width: 820px; text-align: center;　}
   button { margin: 5px; padding: 8px 12px; }
   img.quizImg { max-width: 400px; display: block; margin: 10px auto; }
   .iconOption { width: 80px; height: 80px; border: 2px solid #ccc; margin: 5px; cursor: pointer; }
@@ -208,6 +209,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
