--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
 <script>
 const quizzes = [
-  { number: 1, question: "万博の中央にある、自然豊かなゾーンの名前は？", choices: ["静かな林","静寂の公園","静けさの森"], answer: "静けさの森", img: null },
+  { number: 1, question: "万博の中央にある、自然豊かなゾーンの名前は何でしょう？", choices: ["静かな林","静寂の公園","静けさの森"], answer: "静けさの森", img: null },
   { number: 2, question: "この画像のパビリオンはどこでしょう？", choices: ["コモンズB館","コモンズC館","コモンズD館"], answer: "コモンズC館", img: "images/q2.png" },
   { number: 3, question: "「２億円トイレ」で有名なトイレ５で使われていない色は何でしょう？", choices: ["オレンジ","黄色","緑"], answer: "緑", img: null },
-  { number: 4, question: "この画像のパビリオンはどれでしょう？", choices: ["関西パビリオン","EXPO ホール「シャインハット」","三菱未来館"], answer: "EXPO ホール「シャインハット」", img: "images/q4.png" },
-  { number: 5, question: "⑤にあるお寿司屋さんは何でしょう？", choices: ["くら寿司","スシロー","大起水産"], answer: "くら寿司", img: null },
+  { number: 4, question: "この画像の壁面はどのパビリオンにあるでしょう？", choices: ["関西パビリオン","EXPO ホール「シャインハット」","三菱未来館"], answer: "EXPO ホール「シャインハット」", img: "images/q4.png" },
+  { number: 5, question: "地図上の「問題⑤」の位置にあるお寿司屋さんは何でしょう？", choices: ["くら寿司","スシロー","大起水産"], answer: "くら寿司", img: null },
 ];
 
 let currentIndex = 0;
@@ -209,6 +209,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
