--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div id="nameInput" style="display:none;">
   <h2 id="nameInputTitle">賞状を作成できます</h2>
-  <p>名前を入力してください：</p>
+  <p>賞状を作成できます！名前を入力してください：</p>
   <input type="text" id="userNameField" placeholder="名前を入力"><br><br>
   <p>アイコンを選択：</p>
   <div id="iconSelection">
@@ -224,6 +224,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
