--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script>
 const quizzes = [
   { number: 1, question: "万博の中央にある、自然豊かなゾーンの名前は何でしょう？", choices: ["静かな林","静寂の公園","静けさの森"], answer: "静けさの森", img: null },
-  { number: 2, question: "この画像のパビリオンはどこでしょう？", choices: ["コモンズB館","コモンズC館","コモンズD館"], answer: "コモンズC館", img: "images/q2.png" },
+  { number: 2, question: "この画像の壁面はどのパビリオンにあるでしょう？", choices: ["コモンズB館","コモンズC館","コモンズD館"], answer: "コモンズC館", img: "images/q2.png" },
   { number: 3, question: "「２億円トイレ」で有名なトイレ５で使われていない色は何でしょう？", choices: ["オレンジ","黄色","緑"], answer: "緑", img: null },
   { number: 4, question: "この画像の壁面はどのパビリオンにあるでしょう？", choices: ["関西パビリオン","EXPO ホール「シャインハット」","三菱未来館"], answer: "EXPO ホール「シャインハット」", img: "images/q4.png" },
   { number: 5, question: "地図上の「問題⑤」の位置にあるお寿司屋さんは何でしょう？", choices: ["くら寿司","スシロー","大起水産"], answer: "くら寿司", img: null },
@@ -104,7 +104,7 @@ function displayQuestion() {
   document.getElementById("nextBtn").style.display = currentIndex === quizzes.length-1 ? "none" : "inline-block";
 
   document.getElementById("quizResult").innerText = answers[currentIndex] !== null ? 
-    (answers[currentIndex]===q.answer ? "正解！" : "不正解") : "";
+    (answers[currentIndex]===q.answer ? "正解！やったね！" : "残念") : "";
 }
 
 // 選択肢選択
@@ -224,6 +224,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
