--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   .selected { border-color: #007BFF; }
   .choiceBtn.selected { background-color: #007BFF; color: #fff; }
   .choiceBtn.disabled { opacity: 0.5; pointer-events: none; }
-  #certificateCanvas { display: block; margin: 0 auto; }
+  #certificateCanvas { max-width: 400px; display: block; margin: 0 auto; }
 </style>
 </head>
 <body>
@@ -224,6 +224,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
