--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <script>
 const quizzes = [
-  { number: 1, question: "地図上の「問題⑤」の位置にあるお寿司屋さんは何でしょう？", choices: ["くら寿司","スシロー","大起水産"], answer: "くら寿司", img: null },
+  { number: 1, question: "地図上の「問題①」の位置にあるお寿司屋さんは何でしょう？", choices: ["くら寿司","スシロー","大起水産"], answer: "くら寿司", img: null },
   { number: 2, question: "この画像の壁面はどのパビリオンにあるでしょう？", choices: ["コモンズB館","コモンズC館","コモンズD館"], answer: "コモンズC館", img: "images/q2.png" },
   { number: 3, question: "「２億円トイレ」で有名なトイレ５で使われていない色は何でしょう？", choices: ["オレンジ","黄色","緑"], answer: "緑", img: null },
   { number: 4, question: "この画像の壁面はどのパビリオンにあるでしょう？", choices: ["関西パビリオン","EXPO ホール「シャインハット」","三菱未来館"], answer: "EXPO ホール「シャインハット」", img: "images/q4.png" },
@@ -224,6 +224,7 @@ displayQuestion();
 
 </body>
 </html>
+
 
 
 
